--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
           pip install pyinstaller
+          pip install -r requirements.txt
           pyinstaller --onefile --noconsole --icon=icon.ico GUI.py
 
       - name: Upload
