--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,6 +27,7 @@ jobs:
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
           pip install pyinstaller
+          pip install pyqt6
           pip install -r requirements.txt
           pyinstaller --onefile --noconsole --icon=icon.ico GUI.py
 
